<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="Matches"
        android:id="@+id/nav_match"
        android:icon="@drawable/ic_events"
        />
    <item
            android:title="Teams"
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_teams"
    />
    <item
            android:title="Favorite"
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorites"
    />
    <item
            android:title="Search"
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
    />


</menu>