<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        tools:context=".activity.main.MainActivity">

        <android.support.v7.widget.Toolbar android:layout_width="match_parent"
                                           android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar_main"
        android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"
        app:title="Football Apps"
        >
        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.DrawerLayout android:layout_width="match_parent"
                                                android:layout_height="match_parent"
        android:id="@+id/drawerLayout"
        >
            <FrameLayout android:layout_width="match_parent"
                         android:layout_height="match_parent"
            android:id="@+id/containerView"/>
            <android.support.design.widget.NavigationView android:layout_width="wrap_content"
                                                          android:layout_height="match_parent"
            android:id="@+id/navView"
            app:menu="@menu/drawer_menu"
            android:layout_marginTop="2dp"
            android:layout_gravity="start"/>

        </android.support.v4.widget.DrawerLayout>

</LinearLayout>