<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/bnv_match_search"
            android:enabled="true"
            android:icon="@drawable/ic_events"
            android:title="@string/matches"
            app:showAsAction="ifRoom"/>

    <item
            android:id="@+id/bnv_teams_search"
            android:enabled="true"
            android:icon="@drawable/ic_teams"
            android:title="@string/teams"
            app:showAsAction="ifRoom"/>

</menu>